abstract funcs for httr

--- a/vignettes/using_virustotal.html
+++ b/vignettes/using_virustotal.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Gaurav Sood" />
 
-<meta name="date" content="2016-05-13" />
+<meta name="date" content="2016-06-01" />
 
 <title>Using virustotal</title>
 
@@ -118,7 +118,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">Using virustotal</h1>
 <h4 class="author"><em>Gaurav Sood</em></h4>
-<h4 class="date"><em>2016-05-13</em></h4>
+<h4 class="date"><em>2016-06-01</em></h4>
 
 </div>
 
@@ -128,12 +128,13 @@ $(document).ready(function () {
 <div id="installation" class="section level3">
 <h3>Installation</h3>
 <p>To get the current development version from GitHub:</p>
-<pre class="r"><code>#library(&quot;devtools&quot;)
+<pre class="r"><code>#library(devtools)
 install_github(&quot;soodoku/virustotal&quot;)</code></pre>
+<pre><code>## Skipping install for github remote, the SHA1 (f377f659) has not changed since last install.
+##   Use `force = TRUE` to force installation</code></pre>
 <div id="load-up-the-lib" class="section level4">
 <h4>Load up the lib:</h4>
 <pre class="r"><code>library(virustotal)</code></pre>
-<pre><code>## Error in library(virustotal): there is no package called 'virustotal'</code></pre>
 </div>
 <div id="authentication" class="section level4">
 <h4>Authentication</h4>
