--- a/vignettes/using_virustotal.html
+++ b/vignettes/using_virustotal.html
@@ -130,8 +130,6 @@ $(document).ready(function () {
 <p>To get the current development version from GitHub:</p>
 <pre class="r"><code>#library(devtools)
 install_github(&quot;soodoku/virustotal&quot;)</code></pre>
-<pre><code>## Skipping install for github remote, the SHA1 (f377f659) has not changed since last install.
-##   Use `force = TRUE` to force installation</code></pre>
 <div id="load-up-the-lib" class="section level4">
 <h4>Load up the lib:</h4>
 <pre class="r"><code>library(virustotal)</code></pre>
@@ -146,18 +144,53 @@ install_github(&quot;soodoku/virustotal&quot;)</code></pre>
 <p>Get report on a domain, including passive DNS:</p>
 <pre class="r"><code>domain_report(&quot;http://www.google.com&quot;)</code></pre>
 </div>
+<div id="scan-url" class="section level4">
+<h4>Scan URL</h4>
+<pre class="r"><code>scan_url(&quot;http://www.google.com&quot;)</code></pre>
+<pre><code>##                                                                                                             permalink               resource
+## 1 https://www.virustotal.com/url/dd014af5ed6b38d9130e3f466f850e46d21b951199d53a18ef29ee9341614eaf/analysis/1464817664/ http://www.google.com/</code></pre>
+</div>
 <div id="get-url-report" class="section level4">
 <h4>Get URL report</h4>
 <p>Get report on a domain, including URL:</p>
-<pre class="r"><code>head(url_report(&quot;http://www.google.com&quot;), 10)</code></pre>
+<pre class="r"><code>head(url_report(&quot;http://www.google.com&quot;)[, 1:2], 10)</code></pre>
+<pre><code>##                                                                        scan_id              resource
+## 1  dd014af5ed6b38d9130e3f466f850e46d21b951199d53a18ef29ee9341614eaf-1464816996 http://www.google.com
+## 2  dd014af5ed6b38d9130e3f466f850e46d21b951199d53a18ef29ee9341614eaf-1464816996 http://www.google.com
+## 3  dd014af5ed6b38d9130e3f466f850e46d21b951199d53a18ef29ee9341614eaf-1464816996 http://www.google.com
+## 4  dd014af5ed6b38d9130e3f466f850e46d21b951199d53a18ef29ee9341614eaf-1464816996 http://www.google.com
+## 5  dd014af5ed6b38d9130e3f466f850e46d21b951199d53a18ef29ee9341614eaf-1464816996 http://www.google.com
+## 6  dd014af5ed6b38d9130e3f466f850e46d21b951199d53a18ef29ee9341614eaf-1464816996 http://www.google.com
+## 7  dd014af5ed6b38d9130e3f466f850e46d21b951199d53a18ef29ee9341614eaf-1464816996 http://www.google.com
+## 8  dd014af5ed6b38d9130e3f466f850e46d21b951199d53a18ef29ee9341614eaf-1464816996 http://www.google.com
+## 9  dd014af5ed6b38d9130e3f466f850e46d21b951199d53a18ef29ee9341614eaf-1464816996 http://www.google.com
+## 10 dd014af5ed6b38d9130e3f466f850e46d21b951199d53a18ef29ee9341614eaf-1464816996 http://www.google.com</code></pre>
 </div>
 <div id="get-ip-report" class="section level4">
 <h4>Get IP report</h4>
-<pre class="r"><code>head(ip_report(&quot;8.8.8.8&quot;), 10)</code></pre>
+<pre class="r"><code>ip_report(&quot;8.8.8.8&quot;)$country</code></pre>
+<pre><code>## [1] &quot;US&quot;</code></pre>
 </div>
 <div id="get-file-report" class="section level4">
 <h4>Get File Report</h4>
-<pre class="r"><code>head(file_report(&quot;99017f6eebbac24f351415dd410d522d&quot;), 10)</code></pre>
+<pre class="r"><code>head(file_report(&quot;99017f6eebbac24f351415dd410d522d&quot;)[,1:2], 10)</code></pre>
+<pre><code>                                                                    scans                                                                     scan_id
+## Bkav                                           FALSE, 1.3.0.8042, 20160601 52d3df0ed60c46f336c131bf2ca454f73bafdc4b04dfa2aea80746f5ba9e6d1c-1464797947
+## TotalDefense               TRUE, 37.1.62.1, Win32/ASuspect.HDBBD, 20160601 52d3df0ed60c46f336c131bf2ca454f73bafdc4b04dfa2aea80746f5ba9e6d1c-1464797947
+## MicroWorld-eScan  TRUE, 12.0.250.0, Generic.Malware.V!w.7232B058, 20160601 52d3df0ed60c46f336c131bf2ca454f73bafdc4b04dfa2aea80746f5ba9e6d1c-1464797947
+## nProtect         TRUE, 2016-06-01.01, Trojan/W32.Small.28672.BJA, 20160601 52d3df0ed60c46f336c131bf2ca454f73bafdc4b04dfa2aea80746f5ba9e6d1c-1464797947
+## CMC                           TRUE, 1.1.0.977, Trojan.Win32.VB!O, 20160530 52d3df0ed60c46f336c131bf2ca454f73bafdc4b04dfa2aea80746f5ba9e6d1c-1464797947
+## CAT-QuickHeal                      TRUE, 14.00, Trojan.Comame.r3, 20160601 52d3df0ed60c46f336c131bf2ca454f73bafdc4b04dfa2aea80746f5ba9e6d1c-1464797947
+## ALYac                TRUE, 1.0.1.9, Generic.Malware.V!w.7232B058, 20160601 52d3df0ed60c46f336c131bf2ca454f73bafdc4b04dfa2aea80746f5ba9e6d1c-1464797947
+## Malwarebytes                      TRUE, 2.1.1.1115, Trojan.Qhost, 20160601 52d3df0ed60c46f336c131bf2ca454f73bafdc4b04dfa2aea80746f5ba9e6d1c-1464797947
+## Zillya                   TRUE, 2.0.0.2901, Trojan.VB.Win32.33493, 20160531 52d3df0ed60c46f336c131bf2ca454f73bafdc4b04dfa2aea80746f5ba9e6d1c-1464797947
+## SUPERAntiSpyware                               FALSE, 5.6.0.1032, 20160601 52d3df0ed60c46f336c131bf2ca454f73bafdc4b04dfa2aea80746f5ba9e6d1c-1464797947</code></pre>
+</div>
+<div id="rescan-file" class="section level4">
+<h4>Rescan File</h4>
+<pre class="r"><code>rescan_file(hash='99017f6eebbac24f351415dd410d522d')[,1:2]</code></pre>
+<pre><code>##                                                                                                               permalink response_code
+## 1 https://www.virustotal.com/file/52d3df0ed60c46f336c131bf2ca454f73bafdc4b04dfa2aea80746f5ba9e6d1c/analysis/1464817836/             1</code></pre>
 </div>
 </div>
 </div>
